--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -7,9 +7,8 @@
   <body>
 
     <center><h1>Bookmarks:</h1></center>
-    <center><h2>"https://www.google.co.uk/"</h2></center>
-    <center><h2>"https://it.wikipedia.org/"</h2></center>
-    <center><<h2>>"https://www.cb01.news/"</h2></center>
+    <center><h2><%=@bookmarks.each { |bookmark| puts bookmark }%></h2></center>
+
 
   </body>
 </html>
