all tests passing again

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -8,7 +8,7 @@
     <center><h1>Bookmarks:</h1></center>
     <ul>
       <% @bookmarks.each do |bookmark| %>
-      <li><a href="<%= bookmark %>"></li>
+      <li> <%= bookmark %> </li>
       <% end %>
     </ul>
   </body>
