create bookmark method

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -6,12 +6,23 @@
     <title></title>
   </head>
 
-  <body>
-    <center><h1>Bookmarks:</h1></center>
+  <body bgcolor="lightgreen">
+    <h1>Bookmarks:</h1>
     <ul>
       <% @bookmarks.each do |bookmark| %>
       <li> <a href="<%= bookmark %>"> <%= bookmark %> </a></li>
       <% end %>
-    </ul>
+    </ul><br><br>
+    <form action="/bookmarks" method="post">
+      <h2><font face="century gothic"> Add Bookmark: </font></h2>
+      <input type="text" font="century gothic" name="url">
+      <input type="submit" font="century gothic" value="Add Bookmark">
+    </form>
+    <br><br>
+    <!-- <form action="/bookmarks" method="post">
+      <h2><font face="century gothic"> Delete Bookmark: </font></h2>
+      <input type="text" font="century gothic" name="del_url">
+      <input type="submit" font="century gothic" value="Delete Bookmark">
+    </form> -->
   </body>
 </html>
