--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
-    <center><h1><a href="/bookmarks">Bookmark Page</h1></center>
+  <body bgcolor="lightgreen">
+    <center><h1> Homepage </h1></center><br><br>
+    <center><h2><a href="/bookmarks"> Go to Bookmark Page! </h2></center>
   </body>
 </html>
