--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body bgcolor="lightgreen">
+  <body bgcolor="grey">
+
     <center><h1> Homepage </h1></center><br><br>
-    <center><h2><a href="/bookmarks"> Go to Bookmark Page! </h2></center>
+    <center><h2><a href="/bookmarks"> Add a bookmark </h2></center>
+
   </body>
 </html>
