--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body bgcolor="grey">
+  <body bgcolor="lightgreen">
 
     <center><h1> Homepage </h1></center><br><br>
     <center><h2><a href="/bookmarks"> Add a bookmark </h2></center>
