--- a/views/update.erb
+++ b/views/update.erb
@@ -7,15 +7,15 @@
   <body bgcolor="lightgreen">
     <h3><font face="arial"> Current URL: <%= @bookmark.url %> </font></h3>
     <h3><font face="arial"> Current Title: <%= @bookmark.title %> </font></h3><br><br>
+    <h2><font face="arial"><%= flash[:notice] %> </font></h2>
     <form action="/bookmarks_update/<%= @bookmark.id %>" method="post">
       <input type='hidden' name='_method' value='Patch'/>
-      <h3><font face="arial"> Enter new URL: </font></h3>
+      <h3><font face="arial"> Enter URL: </font></h3>
       <input type="text" font="arial" name="url">
-      <h3><font face="arial"> Enter new Title: </font></h3>
+      <h3><font face="arial"> Enter Title: </font></h3>
       <input type="text" font="arial" name="title">
       <br><br>
       <input type="submit" font="arial" value="Update Bookmark">
     </form>
-    <p> <%= flash[:notice] %> </p>
   </body>
 </html>
