--- a/views/index.erb
+++ b/views/index.erb
@@ -6,8 +6,8 @@
   </head>
   <body bgcolor="lightgreen">
 
-    <center><h1> Homepage </h1></center><br><br>
-    <center><h2><a href="/bookmarks"> Add a bookmark </h2></center>
-
+    <center><h1> Bookmark Manager </h1></center><br><br>
+    <center><h2><a href="/users/new"> Register </h2></center>
+    <center><h2><a href="/sessions/new"> Sign in </h2></center>
   </body>
 </html>
